Fixes and Enhancements since Version 0.5 alpha 3

 - Added a 'binding.hasParent(component,parent)' API function, which is
   specially optimized for use with generic functions, so that you can
   define generic function methods that apply only within some part of a
   component hierarchy.
   
 - PEAK no longer supports Python 2.2; Python 2.3.4 or better is required.

 - The kjbuckets extension module is no longer built and installed by default;
   you must explicitly enable it with a '--with-kjbuckets' flag passed to
   'setup.py'.  Please port your code as soon as practical, this option will
   go away soon.

 - Use of the included 'kjbuckets' module is now DEPRECATED, due to increasing
   bitrot.  Aaron Watters originally wrote this extension for Python 1.2, and
   it has not been well-maintained for newer versions of the Python/C API.
   Instead of 'kjSet' objects, use the Python 2.3 'Set' type, and instead of
   the 'kjGraph' type, use the new 'Graph' type in 'peak.util.Graph'.  Some
   porting effort may be required, as these types are not precisely the same
   in signature as the originals.

 - The '_setNS()' method of the 'peak.util.SOX.ISOXNode_NS' interface has
   changed signature, due to a lack of use of the second argument in the code
   base, and its dependency on 'kjbuckets'.

 - The old 'peak.security' implementation has been removed, and replaced with
   a simpler, more flexible implementation based on generic functions (using
   less than half the code and seven fewer interfaces).  Complete documentation
   and API tests for the new implementation can be found in 'rules.txt' in the
   'peak.security' package directory.

   Also, the new implemetation does not require redundant
   'security.allow(security.Anybody)' declarations just because you've declared
   other permissions for a class, so these declarations have been removed from
   ``peak.web``.  They don't do any harm, however, so you can leave them in